# i3-show-desktop

./: .gitignore  Makefile  README.md  pyproject.toml
show_desktop/scripts/: show_desktop.py
